[gd_scene load_steps=3 format=3 uid="uid://dpm6uda3la667"]

[ext_resource type="PackedScene" uid="uid://dqo24wawwfa3k" path="res://robot.glb" id="1_6mh43"]
[ext_resource type="Script" uid="uid://cb7ixot3vn6cg" path="res://prerender.gd" id="1_nmjra"]

[node name="Prerender" type="Node3D"]
script = ExtResource("1_nmjra")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
render_target_update_mode = 4

[node name="RenderScene" type="Node3D" parent="SubViewport"]

[node name="robot" parent="SubViewport/RenderScene" instance=ExtResource("1_6mh43")]

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.68934)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.68983)

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 28.0
offset_top = 216.0
offset_right = 227.0
offset_bottom = 247.0
text = "Render"

[node name="RenderWidth_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 27.0
offset_top = 39.0
offset_right = 137.0
offset_bottom = 67.0
text = "Render Width"

[node name="RenderWidth" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 147.0
offset_top = 37.0
offset_right = 233.563
offset_bottom = 68.0
max_value = 10000.0
value = 512.0

[node name="RenderHeigth_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 27.0
offset_top = 77.0
offset_right = 137.0
offset_bottom = 105.0
text = "Render Heigth"

[node name="RenderHeigth" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 147.0
offset_top = 75.0
offset_right = 233.563
offset_bottom = 106.0
max_value = 10000.0
value = 512.0

[node name="NCaptures_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 27.0
offset_top = 118.0
offset_right = 138.0
offset_bottom = 146.0
text = "N Captures"

[node name="NCaptures" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 147.0
offset_top = 116.0
offset_right = 233.563
offset_bottom = 147.0
max_value = 3600.0
value = 36.0

[node name="ImageFormat_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 28.0
offset_top = 162.0
offset_right = 139.0
offset_bottom = 190.0
text = "Format image"

[node name="ImageFormat" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 151.0
offset_top = 162.0
offset_right = 215.0
offset_bottom = 194.0

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
